--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.0.0",
     "ngx-quill": "^27.0.2",
     "quill": "^2.0.3",
+    "quill-delta-to-html": "^0.12.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
