--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-     "build:prod": "cross-env-shell \"sed -i 's|apiUrl: .*|apiUrl: \\\"$API_URL\\\"|' src/environments/environment.prod.ts && ng build --configuration=production\"",
+    "build:prod": "cross-env-shell \"sed -i 's|apiUrl: .*|apiUrl: \\\"$API_URL\\\"|' src/environments/environment.prod.ts && ng build --configuration=production\"",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -33,6 +33,7 @@
     "@angular/cli": "^19.0.4",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "cross-env-shell": "^7.0.3",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
